Pizzeria-app-final
Aplicacion terminada

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -8,13 +8,52 @@
 
  <ion-navbar color="primary">
     <button ion-button menuToggle>
+      
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>contact</ion-title>
+    <ion-title>   <ion-icon ios="ios-planet" md="md-planet"></ion-icon> contact</ion-title>
   </ion-navbar>
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding >
+	<ion-card>
+
+  <ion-item>
+    <ion-avatar item-start>
+      <img src="assets/imgs/frank.jpg">
+    </ion-avatar>
+    <h2>Frank Landgrave</h2>
+    <p>Guadalajara.Jal</p>
+  </ion-item>
+
+  <img src="assets/imgs/frank.jpg">
+
+  <ion-card-content>
+    <p>Fundador de Pizza planeta en el año de 2015, y empresario de otras franquicias como "Conde Vampichoco" entre otras; Actualmente se encuentra abriendo más de 30 cadenas de Pizza Planeta al rededor del mundo.</p>
+  </ion-card-content>
+
+  <ion-row>
+    <ion-col>
+      <button ion-button icon-start clear small>
+        <ion-icon name="thumbs-up"></ion-icon>
+        <div>/thepolarproject</div>
+      </button>
+    </ion-col>
+    <ion-col>
+      <button ion-button icon-start clear small>
+        <ion-icon name="text"></ion-icon>
+        <div>4 @PizzaPlaneta</div>
+      </button>
+    </ion-col>
+    <ion-col center text-center>
+      <ion-note>
+       
+      </ion-note>
+    </ion-col>
+  </ion-row>
+
+</ion-card>
+
 
 </ion-content>
