--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -1,6 +1,5 @@
 <!--
   Generated template for the MenuPage page.
-
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
@@ -10,12 +9,24 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Menu</ion-title>
+    <ion-title>  <ion-icon ios="ios-planet" md="md-planet"></ion-icon> Menu</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+	<ion-card *ngFor="let dish of dishes" (click)="dishDetail($event,dish)" color="primary">
+    	<img src="{{'http://localhost:3000/'+ dish.image}}"alt="{{dish.name}}" />
+    	<ion-card-content >
+      		<ion-card-title>
+        		{{dish.name | uppercase}}
+			</ion-card-title>
+			<p>
+			  {{dish.description}}
+			</p>
+    	</ion-card-content>
+  	</ion-card>
 
 </ion-content>
