--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -10,12 +10,47 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>About</ion-title>
+    <ion-title>  <ion-icon ios="ios-planet" md="md-planet"></ion-icon> About</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <ion-card>
+  <img src="assets/imgs/planet.jpg"/>
+  <ion-card-content color="primary">
+    <ion-card-title color="primary">
+      Pizza Planeta Restaurant
+      </ion-card-title>
+    <p>
+      Pizza Planeta es el primer restaurante con tématica estelar en latinoamerica, con más de 15 sucursales al rededor del mundo, se ha convertido en una de las principales pioneras en el negocio de la Pizzeria Intergalactica.¡Ven y prueba la nueva pizza!
+    </p>
+
+  </ion-card-content>
+
+<ion-list>
+  <ion-item color="primary">
+    @PizzaPlaneta
+    <button ion-button outline item-end icon-start>
+      <ion-icon name="star"></ion-icon>
+      Llamar
+    </button>
+  </ion-item>
+</ion-list>
+</ion-card>
+  <ion-card *ngFor="let leader of leaders">
+    <img src="{{'http://localhost:3000/'+ leader.image}}"/>
+    <ion-card-content>
+      <ion-card-title>
+        {{leader.name | uppercase}}
+</ion-card-title>
+<p>
+  {{leader.description}}
+</p>
+    </ion-card-content>
+  </ion-card>
+
+	
 
 </ion-content>
